--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,59 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+:root  {
+  --background: 262.1 49% 96%;
+  --foreground: 262.1 5% 10%;
+  --card: 262.1 49% 96%;
+  --card-foreground: 262.1 5% 15%;
+  --popover: 262.1 49% 96%;
+  --popover-foreground: 262.1 95% 10%;
+  --primary: 262.1 83.3% 57.8%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 262.1 30% 90%;
+  --secondary-foreground: 0 0% 0%;
+  --muted: 224.10000000000002 30% 95%;
+  --muted-foreground: 262.1 5% 40%;
+  --accent: 224.10000000000002 30% 90%;
+  --accent-foreground: 262.1 5% 15%;
+  --destructive: 0 50% 50%;
+  --destructive-foreground: 262.1 5% 96%;
+  --border: 262.1 30% 82%;
+  --input: 262.1 30% 50%;
+  --ring: 262.1 83.3% 57.8%;
+  --radius: 0.5rem;
+}
+.dark  {
+  --background: 262.1 49% 10%;
+  --foreground: 262.1 5% 96%;
+  --card: 262.1 49% 10%;
+  --card-foreground: 262.1 5% 96%;
+  --popover: 262.1 49% 5%;
+  --popover-foreground: 262.1 5% 96%;
+  --primary: 262.1 83.3% 57.8%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 262.1 30% 20%;
+  --secondary-foreground: 0 0% 100%;
+  --muted: 224.10000000000002 30% 25%;
+  --muted-foreground: 262.1 5% 65%;
+  --accent: 224.10000000000002 30% 25%;
+  --accent-foreground: 262.1 5% 95%;
+  --destructive: 0 50% 50%;
+  --destructive-foreground: 262.1 5% 96%;
+  --border: 262.1 30% 50%;
+  --input: 262.1 30% 50%;
+  --ring: 262.1 83.3% 57.8%;
+  --radius: 0.5rem;
+}
+
+
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
