--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,6 +47,22 @@
   --radius: 0.5rem;
 }
 
+.flex-center {
+  @apply flex items-center justify-center;
+}
+
+.flex-start {
+  @apply flex items-start justify-start;
+}
+
+.flex-end {
+  @apply flex items-center justify-end;
+}
+
+.flex-between {
+  @apply flex items-center justify-between;
+}
+
 @layer base {
   * {
     @apply border-border;
